--- a/men.html
+++ b/men.html
@@ -83,7 +83,7 @@
             <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="Search.." />
+            <input type="text" placeholder="What are you looking for?" />
             <img
               src="./images/search-icon.png"
               alt="Search Icon"
@@ -92,12 +92,13 @@
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
-            <a href="./men.html">About Us
-            <div class="overlay-trigger">
+            <a href="./about.html">About Us
+   <!--        <div class="overlay-trigger">
               <label class="hidden checkbox-trigger" for="addtocart1"></label>
               <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
+              
               <div class="overlay about-overlay">
-                <div class="overlay-inside about">
+                <div class="overlay-inside about">   
                   <h2>About Us</h2>
                   <h3>How did we start?</h3>
                   <img src="./images/man-sewing.jpg" alt="about us image" />
@@ -107,9 +108,10 @@
                 </div>
               </div>
             </div>
+            -->
           </a>
-            <a href="./men.html">Contact
-            <div class="overlay-trigger">
+            <a href="./contact.html">Contact
+     <!--       <div class="overlay-trigger">
               <label class="hidden checkbox-trigger" for="addtocart1"></label>
               <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
               <div class="overlay contact-overlay">
@@ -135,6 +137,7 @@
                 </div>
               </div>
             </div>
+            -->
           </a>
           </div>
         </div>
@@ -149,7 +152,7 @@
             <a href="outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="Search.." />
+            <input type="text" placeholder="What are you looking for?" />
             <img
               src="./images/search-icon.png"
               alt="Search Icon"
@@ -209,13 +212,14 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart1"></label>
+                      <button class="cta" type="text" onclick="addToCart('Red Jacket for Men', 7, './images/red-man.jpg')">Add to Cart</button>
+        <!--              <label class="hidden checkbox-trigger" for="addtocart1"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+         <!--                 <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/red-man.jpg" alt="Red Jacket for Men" />
@@ -245,7 +249,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>  -->
                         </div>
                       </div>
                     </div>
@@ -291,12 +295,13 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart2"></label>
+                      <button class="cta" type="text" onclick="addToCart('Military Jacket for Men', 8, './images/military-man.jpg')">Add to Cart</button>
+     <!--                 <label class="hidden checkbox-trigger" for="addtocart2"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart2">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
-                          <h2>Your Cart</h2>
+         <!--                 <h2>Your Cart</h2>
                           <ul>
                             <li>
                               <span class="cart-img">
@@ -327,7 +332,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>              -->
                         </div>
                       </div>
                     </div>
@@ -372,13 +377,14 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart3"></label>
+                      <button class="cta" type="text" onclick="addToCart('Orange Jacket for Men', 9, './images/orange-man.jpg')">Add to Cart</button>
+       <!--               <label class="hidden checkbox-trigger" for="addtocart3"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart3">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+       <!--                   <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/red-man.jpg" alt="Red Jacket for Men" />
@@ -408,7 +414,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>                 -->
                         </div>
                       </div>
                     </div>
@@ -455,13 +461,14 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart4"></label>
+                      <button class="cta" type="text" onclick="addToCart('Brown Jacket for Men', 10, './images/brown-man.jpg')">Add to Cart</button>
+        <!--              <label class="hidden checkbox-trigger" for="addtocart4"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart4">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+         <!--                 <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/red-man.jpg" alt="Red Jacket for Men" />
@@ -491,7 +498,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>        -->
                         </div>
                       </div>
                     </div>
@@ -538,13 +545,14 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart5"></label>
+                      <button class="cta" type="text" onclick="addToCart('Yellow Jacket for Men', 11, './images/yellow-man.jpg')">Add to Cart</button>
+       <!--               <label class="hidden checkbox-trigger" for="addtocart5"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart5">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+         <!--                 <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/red-man.jpg" alt="Red Jacket for Men" />
@@ -574,7 +582,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>               -->
                         </div>
                       </div>
                     </div>
@@ -619,13 +627,14 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart6"></label>
+                      <button class="cta" type="text" onclick="addToCart('Black Jacket for Men', 12, './images/black-man.jpg')">Add to Cart</button>
+      <!--               <label class="hidden checkbox-trigger" for="addtocart6"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart6">
+                      --> 
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+      <!--                    <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/red-man.jpg" alt="Red Jacket for Men" />
@@ -655,7 +664,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>              -->
                         </div>
                       </div>
                     </div>
@@ -719,5 +728,6 @@
             </div>
       <script src="./js/cart.js"></script>
       <script src="./js/modal-script.js"></script>
+      <script src="./js/hamburger-menu-script.js"></script>
   </body>
 </html>
