--- a/outlet.html
+++ b/outlet.html
@@ -80,7 +80,7 @@
             <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="Search.." />
+            <input type="text" placeholder="What are you looking for?" />
             <img
               src="./images/search-icon.png"
               alt="Search Icon"
@@ -89,8 +89,8 @@
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
-            <a href="./outlet.html">About Us
-            <div class="overlay-trigger">
+            <a href="./about.html">About Us
+    <!--        <div class="overlay-trigger">
               <label class="hidden checkbox-trigger" for="addtocart1"></label>
               <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
               <div class="overlay about-overlay">
@@ -104,9 +104,10 @@
                 </div>
               </div>
             </div>
+            -->
           </a>
-            <a href="./outlet.html">Contact
-            <div class="overlay-trigger">
+            <a href="./contact.html">Contact
+  <!--      <div class="overlay-trigger">
               <label class="hidden checkbox-trigger" for="addtocart1"></label>
               <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
               <div class="overlay contact-overlay">
@@ -132,6 +133,7 @@
                 </div>
               </div>
             </div>
+            -->
           </a>
           </div>
         </div>
@@ -146,7 +148,7 @@
             <a href="outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="Search.." />
+            <input type="text" placeholder="What are you looking for?" />
             <img
               src="./images/search-icon.png"
               alt="Search Icon"
@@ -155,8 +157,8 @@
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact</a>
           </div>
         </div>
         <div class="info-section">
@@ -207,13 +209,14 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart4"></label>
+                      <button class="cta" type="text" onclick="addToCart('Discounted Blue Jacket for Women', 13, './images/blue-woman.jpg')">Add to Cart</button>
+    <!--                  <label class="hidden checkbox-trigger" for="addtocart4"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart4">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+     <!--                     <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/blue-woman.jpg" alt="Blue Jacket for Women" />
@@ -243,7 +246,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>             -->
                         </div>
                       </div>
                     </div>
@@ -288,14 +291,15 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart5"></label>
+                      <button class="cta" type="text" onclick="addToCart('Discounted Black Jacket for Men', 14, './images/black-outlet.jpg')">Add to Cart</button>
+       <!--              <label class="hidden checkbox-trigger" for="addtocart5"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart5">
+                      --> 
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
-                            <li>
+        <!--                <ul>
+                          <li>
                               <span class="cart-img">
                                 <img src="./images/black-outlet.jpg" alt="Red Jacket for Men" />
                               </span>
@@ -324,7 +328,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>                   -->
                         </div>
                       </div>
                     </div>
@@ -370,13 +374,14 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text">Add to Cart</button>
-                      <label class="hidden checkbox-trigger" for="addtocart6"></label>
+                      <button class="cta" type="text" onclick="addToCart('Discounted White Jacket for Men', 15, './images/white-outlet.jpg')">Add to Cart</button>
+      <!--                <label class="hidden checkbox-trigger" for="addtocart6"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart6">
+                      -->
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
                           <h2>Your Cart</h2>
-                          <ul>
+         <!--                 <ul>
                             <li>
                               <span class="cart-img">
                                 <img src="./images/white-outlet.jpg" alt="Red Jacket for Men" />
@@ -406,7 +411,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>                 -->
                         </div>
                       </div>
                     </div>
