--- a/women.html
+++ b/women.html
@@ -152,7 +152,7 @@
             <a href="./outlet.html">Outlet</a>
           </div>
           <div class="search-section">
-            <input type="text" placeholder="Search.." />
+            <input type="text" placeholder="What are you looking for?" />
             <img
               src="./images/search-icon.png"
               alt="Search Icon"
@@ -213,7 +213,7 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text" onclick="addToCart('Orange Jacket for Women', '1', './images/orange-woman.jpg')">Add to Cart</button>
+                      <button class="cta" type="text" onclick="addToCart('Orange Jacket for Women', 1, './images/orange-woman.jpg')">Add to Cart</button>
                      <!-- <label class="hidden checkbox-trigger" for="addtocart1"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart1">
                       -->
@@ -302,7 +302,7 @@
                       --> 
                       <div class="overlay cart-overlay">
                         <div class="overlay-inside cart">
-                          <button onclick="showCart()">Your Cart</button>
+                          <button>Your Cart</button>
                           <button class="cta cta-red" type="cta">Check Out</button>
        <!--                   <label class="hidden checkbox-trigger" for="order2"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order2">
@@ -385,7 +385,7 @@
                               <span>228 $</span>
                             </li>
                           </ul>              -->
-                          <button class="cta cta-red" type="cta" onclick="showCart()">Check Out</button>
+                          <button class="cta cta-red" type="cta">Check Out</button>
            <!--               <label class="hidden checkbox-trigger" for="order3"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order3">
                           <div class="popup order-popup">
@@ -441,7 +441,7 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text" onclick="addtoCart('Yellow Jacket for Women', 4, './images/yellow-woman.jpg')">Add to Cart</button>
+                      <button class="cta" type="text" onclick="addToCart('Yellow Jacket for Women', 4, './images/yellow-woman.jpg')">Add to Cart</button>
        <!--            <label class="hidden checkbox-trigger" for="addtocart4"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart4">
                       -->
@@ -468,7 +468,7 @@
                               <span>228 $</span>
                             </li>
                           </ul>        -->
-                          <button class="cta cta-red" type="cta" onclick="showCart()">Check Out</button>
+                          <button class="cta cta-red" type="cta">Check Out</button>
                <!--           <label class="hidden checkbox-trigger" for="order4"></label>
                          <input class="hidden checkbox-trigger" type="checkbox" id="order4">
                           <div class="popup order-popup">
@@ -524,7 +524,7 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text" onclick="addtoCart('White Jacket for Women', 5, './images/white-woman.jpg')">Add to Cart</button>
+                      <button class="cta" type="text" onclick="addToCart('White Jacket for Women', 5, './images/white-woman.jpg')">Add to Cart</button>
      <!--                 <label class="hidden checkbox-trigger" for="addtocart5"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart5">
                       -->
@@ -551,7 +551,7 @@
                               <span>228 $</span>
                             </li>
                           </ul>          -->
-                          <button class="cta cta-red" type="cta" onclick="showCart()">Check Out</button>
+                          <button class="cta cta-red" type="cta">Check Out</button>
         <!--                  <label class="hidden checkbox-trigger" for="order5"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order5">
                           <div class="popup order-popup">
@@ -608,7 +608,7 @@
                       <ul><li>S</li><li>M</li><li>L</li><li>XL</li></ul>
                     </div>
                     <div class="product-checkout-button">
-                      <button class="cta" type="text" onclick="addtoCart('Red Jacket for Women', 5, './images/red-woman.jpg')">Add to Cart</button>
+                      <button class="cta" type="text" onclick="addToCart('Red Jacket for Women', 6, './images/red-woman.jpg')">Add to Cart</button>
 
        <!--               <label class="hidden checkbox-trigger" for="addtocart6"></label>
                       <input class="hidden checkbox-trigger" type="checkbox" id="addtocart6">
@@ -635,7 +635,7 @@
                               <span>Total</span>
                               <span>228 $</span>
                             </li>
-                          </ul>       -->
+                          </ul>      
                           <button class="cta cta-red" type="cta" onclick="addToCart">Check Out</button>
                           <label class="hidden checkbox-trigger" for="order6"></label>
                           <input class="hidden checkbox-trigger" type="checkbox" id="order6">
@@ -646,7 +646,7 @@
                                 <p>We have sent order confirmation to your email.</p>
                               </div>
                             </div>
-                          </div>
+                          </div>          -->
                         </div>
                       </div>
                     </div>
@@ -709,6 +709,7 @@
             </div>
     <script src="./js/cart.js"></script>
     <script src="./js/modal-script.js"></script>
+    <script src="./js/hamburger-menu-script.js"></script>
 
   </body>
 </html>
