--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
           </div>
           <div class="information-section">
             <a href="#">SIGN IN | SIGN UP</a>
-            <a href="#">About Us</a>
-            <a href="#">Contact</a>
+            <a href="./about.html">About Us</a>
+            <a href="./contact.html">Contact</a>
           </div>
         </div>
         <div class="info-section">
@@ -154,6 +154,64 @@
           class="background-image"
         />
       </div>
+      <div>
+        <div class="deals-title">
+          <h1>OUR BEST DEALS</h1>
+        </div>
+        <div class="best-deals">
+        <div class="main-page">
+          <h1>Womens' Jackets</h1>
+          <section class="main-content-shop">
+            <div class="products">
+              <div class="product">
+                <div class="product-clickable">
+                  <img src="./images/orange-woman.jpg" alt="Orange Jacket for Women"/>
+                  <div>
+                    <p>$121</p>
+                    <p>Color: Red</p>
+                    <p>Suitable for: rain, wind</p>
+                  </div>
+                  </div>
+                  </div>
+                  </div>
+                  </section>
+                  </div>
+                  <div class="main-page">
+                    <h1>Mens' Jackets</h1>
+                    <section class="main-content-shop best-deals">
+                      <div class="products">
+                        <div class="product">
+                          <div class="product-clickable">
+                            <img src="./images/red-man.jpg" alt="Red Jacket for Men"/>
+                            <div>
+                              <p>$121</p>
+                              <p>Color: Red</p>
+                              <p>Suitable for: rain, wind</p>
+                            </div>
+                            </div>
+                            </div>
+                            </div>
+                            </section>
+                            </div>
+                    <div class="main-page">
+                      <h1>Outlet Jackets</h1>
+                      <section class="main-content-shop">
+                        <div class="products">
+                          <div class="product">
+                            <div class="product-clickable">
+                              <img src="./images/black-outlet.jpg" alt="Discounted Black Jacket for Men"/>
+                                <div>
+                                  <p>$121</p>
+                                  <p>Color: Red</p>
+                                  <p>Suitable for: rain, wind</p>
+                                </div>
+                            </div>
+                          </div>
+                        </div>
+                        </section>
+                      </div>
+      </div>
+    </div>
     </main>
     <footer>
       <div class="footer">
