--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./styles/cart.css" />
     <link rel="stylesheet" href="./styles/contact.css" />
     <link rel="stylesheet" href="./styles/contact-form.css" />
-    <title>Rainy days | Home</title>
+    <title>Rainy days | Contact</title>
     <!-- Hotjar Tracking Code for https://silly-volhard-7894ac.netlify.app -->
     <script>
       (function (h, o, t, j, a, r) {
@@ -149,6 +149,7 @@
     </header>
     <main>
       <div class="main-content">
+        <div id="contactUs">
         <h2>Contact Us</h2>
         <ul>
           <li>
@@ -172,6 +173,7 @@
             >
           </li>
         </ul>
+      </div>
         <div class="map">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d32004.489147108878!2d10.69800843655968!3d59.910890807636335!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46416bb3f8b7d64b%3A0x9cad8a439f8859cc!2sSentrum%2C%20Oslo!5e0!3m2!1sen!2sno!4v1639492643681!5m2!1sen!2sno" 
           allowfullscreen="" loading="lazy"></iframe></div>
